--- a/index.html
+++ b/index.html
@@ -1,279 +1,261 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MSBombas | Selección de Bombas I.M.S.</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<style>
-:root {
-  --azul: #002b55;
-  --verde: #00b386;
-  --gris: #f4f7f9;
-  --blanco: #fff;
-}
-body {
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: var(--gris);
-  margin: 0;
-  color: #222;
-}
-header {
-  background: var(--azul);
-  color: var(--blanco);
-  padding: 20px;
-  text-align: center;
-}
-h1 { margin: 0; font-size: 1.8em; }
-.container {
-  max-width: 1000px;
-  margin: 30px auto;
-  background: var(--blanco);
-  padding: 25px;
-  border-radius: 15px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-}
-select {
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 1em;
-}
-button {
-  background: var(--verde);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-button:hover { background: #009973; }
-.info {
-  margin-top: 20px;
-  background: #e8f9f1;
-  border-left: 4px solid var(--verde);
-  padding: 15px;
-  border-radius: 10px;
-}
-canvas { margin-top: 30px; }
-footer {
-  background: var(--azul);
-  color: var(--blanco);
-  text-align: center;
-  padding: 15px;
-  margin-top: 40px;
-  font-size: 0.9em;
-}
-.resena {
-  margin-top: 30px;
-  background: #f1f6fc;
-  border-left: 4px solid var(--azul);
-  padding: 15px;
-  border-radius: 10px;
-  font-size: 0.95em;
-}
-@media (max-width: 600px) {
-  input, select { width: 100%; }
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MSBombas | Catálogo Técnico</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: "Segoe UI", sans-serif;
+      margin: 0;
+      background: #fff;
+      color: #0a2540;
+    }
+
+    header {
+      background: linear-gradient(90deg, #0a2540, #007a5e);
+      color: white;
+      text-align: center;
+      padding: 1rem 0;
+      font-size: 1.5rem;
+      letter-spacing: 1px;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 1rem;
+      gap: 1.5rem;
+    }
+
+    .card {
+      background: #f8f8f8;
+      border-radius: 16px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      padding: 1rem;
+      width: 350px;
+    }
+
+    select {
+      width: 100%;
+      padding: 8px;
+      margin-top: 6px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    .info {
+      margin-top: 1rem;
+    }
+
+    .info img {
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 10px;
+      background: white;
+    }
+
+    #chartContainer {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #fafafa;
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    canvas {
+      width: 100%;
+      height: 400px;
+    }
+
+    #modeloActual {
+      text-align: center;
+      font-weight: bold;
+      color: #007a5e;
+      margin-top: 1rem;
+    }
+
+    #loadingBar {
+      width: 0%;
+      height: 6px;
+      background-color: #007a5e;
+      transition: width 1s;
+    }
+
+    .loading-container {
+      width: 100%;
+      background-color: #e6e6e6;
+      margin-top: 5px;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>MSBombas | Catálogo Técnico</h1>
+  </header>
 
-<header>
-  <h1>🔧 Selección de Bombas Hidráulicas I.M.S.</h1>
-  <p>Simulador técnico de curvas, potencias y rendimiento</p>
-</header>
+  <div class="container">
+    <div class="card">
+      <h3>Seleccione parámetros</h3>
+      <label>Serie:</label>
+      <select id="serieSelect"></select>
 
-<div class="container">
-  <h2>🧭 Selección técnica</h2>
+      <label>Modelo:</label>
+      <select id="modeloSelect"></select>
 
-  <label>Tipo de bomba:</label>
-  <select id="tipoBomba"></select>
+      <label>Diámetro de impulsor (mm):</label>
+      <select id="diametroSelect"></select>
+    </div>
 
-  <label>Modelo:</label>
-  <select id="modelo"></select>
-
-  <label>RPM:</label>
-  <select id="rpm"></select>
-
-  <label>Tipo de motor:</label>
-  <select id="tipoMotor">
-    <option value="Eléctrico">Eléctrico</option>
-    <option value="Bencinero">Bencinero</option>
-    <option value="Diésel">Diésel</option>
-  </select>
-
-  <label>Potencia del motor (HP):</label>
-  <select id="potencia"></select>
-
-  <button onclick="mostrarDatos()">Mostrar características</button>
-
-  <div id="info" class="info"></div>
-  <canvas id="grafico"></canvas>
-
-  <div class="resena">
-    <h3>📘 Cómo interpretar la curva</h3>
-    <p>
-      El eje <b>X</b> representa el <b>caudal (L/min)</b>, es decir, el volumen de agua que bombea la bomba.<br>
-      El eje <b>Y</b> muestra la <b>altura manométrica (m)</b> y la <b>potencia del motor (HP)</b>. 
-      <ul>
-        <li>🟦 <b>Curva azul:</b> indica la presión o altura que la bomba entrega según el caudal.</li>
-        <li>🟩 <b>Curva verde:</b> muestra la potencia absorbida por el motor.</li>
-        <li>🟧 <b>Curva naranja:</b> representa la eficiencia (%), ideal entre 70 y 85%.</li>
-        <li>🔴 <b>Curva roja:</b> (si aparece) muestra el <b>NPSH requerido</b> para evitar cavitación.</li>
-      </ul>
-      En general, una bomba trabaja mejor cerca de su <b>punto de máxima eficiencia (BEP)</b>,
-      donde se logra el mejor equilibrio entre caudal, altura y consumo.
-    </p>
+    <div class="card info">
+      <h3>Información técnica</h3>
+      <div id="modeloActual">Seleccione una bomba...</div>
+      <div class="loading-container"><div id="loadingBar"></div></div>
+      <img id="bombaImg" src="" alt="Imagen de bomba" />
+      <div id="dimensiones"></div>
+    </div>
   </div>
-</div>
 
-<footer>
-  © 2025 MSBombas | Desarrollado por zuriciver-web
-</footer>
+  <div id="chartContainer">
+    <canvas id="curvaChart"></canvas>
+  </div>
 
-<script>
-let dataBombas = {};
-let chart = null;
+  <script>
+    const serieSelect = document.getElementById("serieSelect");
+    const modeloSelect = document.getElementById("modeloSelect");
+    const diametroSelect = document.getElementById("diametroSelect");
+    const modeloActual = document.getElementById("modeloActual");
+    const bombaImg = document.getElementById("bombaImg");
+    const dimensionesDiv = document.getElementById("dimensiones");
+    const loadingBar = document.getElementById("loadingBar");
 
-// Cargar el JSON
-fetch("./bombas_ims.json")
-  .then(res => res.json())
-  .then(data => {
-    dataBombas = data.series;
-    cargarTipos();
-  });
+    let data = {};
+    let chart;
 
-// Cargar los tipos de bomba
-function cargarTipos() {
-  const select = document.getElementById("tipoBomba");
-  select.innerHTML = '<option value="">-- Seleccione --</option>';
-  dataBombas.forEach(s => {
-    const opt = document.createElement("option");
-    opt.value = s.nombre;
-    opt.textContent = s.nombre + " (" + s.descripcion + ")";
-    select.appendChild(opt);
-  });
-  select.addEventListener("change", cargarModelos);
-}
-
-function cargarModelos() {
-  const tipo = document.getElementById("tipoBomba").value;
-  const selectModelo = document.getElementById("modelo");
-  selectModelo.innerHTML = '<option value="">-- Seleccione --</option>';
-  const serie = dataBombas.find(s => s.nombre === tipo);
-  if (!serie) return;
-  serie.modelos.forEach(m => {
-    const opt = document.createElement("option");
-    opt.value = m.codigo;
-    opt.textContent = m.codigo;
-    selectModelo.appendChild(opt);
-  });
-  selectModelo.addEventListener("change", cargarRPM);
-}
-
-function cargarRPM() {
-  const tipo = document.getElementById("tipoBomba").value;
-  const modelo = document.getElementById("modelo").value;
-  const serie = dataBombas.find(s => s.nombre === tipo);
-  const mod = serie.modelos.find(m => m.codigo === modelo);
-  const selectRPM = document.getElementById("rpm");
-  selectRPM.innerHTML = "";
-  if (Array.isArray(mod.rpm)) {
-    mod.rpm.forEach(r => {
-      const opt = document.createElement("option");
-      opt.value = r;
-      opt.textContent = r + " RPM";
-      selectRPM.appendChild(opt);
-    });
-  } else {
-    const opt = document.createElement("option");
-    opt.value = mod.rpm;
-    opt.textContent = mod.rpm + " RPM";
-    selectRPM.appendChild(opt);
-  }
-  cargarHP();
-}
-
-function cargarHP() {
-  const tipo = document.getElementById("tipoBomba").value;
-  const modelo = document.getElementById("modelo").value;
-  const serie = dataBombas.find(s => s.nombre === tipo);
-  const mod = serie.modelos.find(m => m.codigo === modelo);
-  const select = document.getElementById("potencia");
-  select.innerHTML = "";
-  (mod.motor || mod.potencia_hp).forEach(hp => {
-    const opt = document.createElement("option");
-    opt.value = hp;
-    opt.textContent = hp;
-    select.appendChild(opt);
-  });
-}
-
-function mostrarDatos() {
-  const tipo = document.getElementById("tipoBomba").value;
-  const modelo = document.getElementById("modelo").value;
-  const rpm = document.getElementById("rpm").value;
-  const serie = dataBombas.find(s => s.nombre === tipo);
-  if (!serie) return;
-  const mod = serie.modelos.find(m => m.codigo === modelo);
-  if (!mod) return;
-
-  let curvaSeleccionada = mod.curva;
-  if (typeof mod.curva === "object") curvaSeleccionada = mod.curva[rpm];
-
-  let html = `<h3>Características ${mod.codigo}</h3>`;
-  html += `<b>Serie:</b> ${serie.nombre}<br>`;
-  html += `<b>RPM:</b> ${rpm}<br>`;
-  html += `<b>Impulsor (mm):</b> ${mod.diametro_impulsor_mm ? mod.diametro_impulsor_mm.join(", ") : "N/D"}<br>`;
-  html += `<b>Caudal (L/min):</b> ${mod.caudal_lmin.join(", ")}<br>`;
-  html += `<b>Altura (m):</b> ${mod.altura_m.join(", ")}<br>`;
-  html += `<b>Potencia (HP):</b> ${mod.potencia_hp.join(", ")}<br>`;
-  html += `<b>NPSH (m):</b> ${mod.npsh_m ? mod.npsh_m.join(", ") : "N/D"}<br>`;
-  if (mod.dimensiones)
-    html += `<b>Dimensiones (mm):</b> A=${mod.dimensiones.A}, B=${mod.dimensiones.B}, C=${mod.dimensiones.C}, Peso=${mod.dimensiones.peso_kg} kg<br>`;
-  html += `<b>Curva:</b> ${curvaSeleccionada ? curvaSeleccionada : "No disponible"}<br>`;
-  document.getElementById("info").innerHTML = html;
-
-  mostrarGrafico(mod);
-}
-
-function mostrarGrafico(mod) {
-  const ctx = document.getElementById("grafico").getContext("2d");
-  if (chart) chart.destroy();
-
-  const eficiencia = mod.eficiencia || mod.caudal_lmin.map((_, i) => Math.max(60, 85 - i * 5));
-
-  chart = new Chart(ctx, {
-    type: "line",
-    data: {
-      labels: mod.caudal_lmin,
-      datasets: [
-        { label: "Altura (m)", data: mod.altura_m, borderColor: "#002b55", yAxisID: "yH", fill: false, tension: 0.3 },
-        { label: "Potencia (HP)", data: mod.potencia_hp, borderColor: "#00b386", yAxisID: "yP", fill: false, tension: 0.3 },
-        { label: "Eficiencia (%)", data: eficiencia, borderColor: "#ff9800", yAxisID: "yE", fill: false, tension: 0.3, borderDash: [5, 5] },
-        ...(mod.npsh_m ? [{ label: "NPSH (m)", data: mod.npsh_m, borderColor: "#e53935", yAxisID: "yN", fill: false, tension: 0.3, borderDash: [2, 4] }] : [])
-      ]
-    },
-    options: {
-      responsive: true,
-      interaction: { mode: "index", intersect: false },
-      stacked: false,
-      scales: {
-        x: { title: { display: true, text: "Caudal (L/min)" } },
-        yH: { type: "linear", position: "left", title: { display: true, text: "Altura (m)" }, grid: { drawOnChartArea: false } },
-        yP: { type: "linear", position: "right", title: { display: true, text: "Potencia (HP)" }, grid: { drawOnChartArea: false } },
-        yE: { type: "linear", position: "left", min: 50, max: 100, display: true, title: { display: true, text: "Eficiencia (%)" }, grid: { drawOnChartArea: false } },
-        yN: { type: "linear", position: "right", display: !!mod.npsh_m, title: { display: true, text: "NPSH (m)" }, grid: { drawOnChartArea: false } }
-      },
-      plugins: { legend: { position: "top" }, tooltip: { enabled: true } }
+    async function loadData() {
+      try {
+        loadingBar.style.width = "20%";
+        const response = await fetch("./bombas.json");
+        data = await response.json();
+        loadingBar.style.width = "70%";
+        populateSeries();
+        loadingBar.style.width = "100%";
+        setTimeout(() => (loadingBar.style.width = "0%"), 1500);
+      } catch (err) {
+        console.error("Error cargando datos:", err);
+      }
     }
-  });
-}
-</script>
 
+    function populateSeries() {
+      serieSelect.innerHTML = "";
+      data.series.forEach((s, i) => {
+        const opt = document.createElement("option");
+        opt.value = i;
+        opt.textContent = s.nombre;
+        serieSelect.appendChild(opt);
+      });
+      serieSelect.addEventListener("change", populateModelos);
+      populateModelos();
+    }
+
+    function populateModelos() {
+      modeloSelect.innerHTML = "";
+      const serie = data.series[serieSelect.value];
+      serie.modelos.forEach((m, i) => {
+        const opt = document.createElement("option");
+        opt.value = i;
+        opt.textContent = m.codigo;
+        modeloSelect.appendChild(opt);
+      });
+      modeloSelect.addEventListener("change", populateDiametros);
+      populateDiametros();
+    }
+
+    function populateDiametros() {
+      diametroSelect.innerHTML = "";
+      const serie = data.series[serieSelect.value];
+      const modelo = serie.modelos[modeloSelect.value];
+      modelo.diametros.forEach((d, i) => {
+        const opt = document.createElement("option");
+        opt.value = i;
+        opt.textContent = d.mm + " mm";
+        diametroSelect.appendChild(opt);
+      });
+      diametroSelect.addEventListener("change", updateChart);
+      updateChart();
+    }
+
+    function updateChart() {
+      const serie = data.series[serieSelect.value];
+      const modelo = serie.modelos[modeloSelect.value];
+      const diametro = modelo.diametros[diametroSelect.value];
+
+      modeloActual.textContent =
+        `Mostrando curvas para: ${modelo.codigo} Ø${diametro.mm} mm (${modelo.fabricante})`;
+
+      bombaImg.src = modelo.imagen;
+      dimensionesDiv.innerHTML = `
+        <p><strong>Dimensiones:</strong> A=${modelo.dimensiones.A} mm, 
+        B=${modelo.dimensiones.B} mm, C=${modelo.dimensiones.C} mm<br>
+        <strong>Peso:</strong> ${modelo.dimensiones.peso_kg} kg</p>
+      `;
+
+      const ctx = document.getElementById("curvaChart").getContext("2d");
+      if (chart) chart.destroy();
+
+      chart = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: diametro.caudal_lmin,
+          datasets: [
+            {
+              label: "Altura (m)",
+              data: diametro.altura_m,
+              borderColor: "#0a2540",
+              tension: 0.4
+            },
+            {
+              label: "Potencia (HP)",
+              data: diametro.potencia_hp,
+              borderColor: "#007a5e",
+              tension: 0.4
+            },
+            {
+              label: "Eficiencia (%)",
+              data: diametro.eficiencia_pct,
+              borderColor: "#00b386",
+              tension: 0.4
+            },
+            {
+              label: "NPSH (m)",
+              data: diametro.npsh_m,
+              borderColor: "#888",
+              borderDash: [5, 5],
+              tension: 0.4
+            }
+          ]
+        },
+        options: {
+          responsive: true,
+          plugins: {
+            legend: { position: "bottom" },
+            title: {
+              display: true,
+              text: "Curvas de rendimiento (Sistema Métrico)"
+            }
+          },
+          scales: {
+            x: { title: { display: true, text: "Caudal (L/min)" } },
+            y: { title: { display: true, text: "Valores" } }
+          }
+        }
+      });
+    }
+
+    loadData();
+  </script>
 </body>
 </html>
